applying automl to dimensionality comparisons

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1157,113 +1157,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1062.9567487156555,\n",
-       " 'train_RMSE_to_mean_ratio': 0.3724422890002934,\n",
-       " 'train_MAE:': 664.4102139915423,\n",
-       " 'test_RMSE:': 1066.8310890935884,\n",
-       " 'test_RMSE_to_mean_ratio': 0.37430819670862775,\n",
-       " 'test_MAE:': 669.5588294505975}"
+       "{'train_RMSE:': 1094.7580574599147,\n",
+       " 'train_RMSE_to_mean_ratio': 0.38358493637162616,\n",
+       " 'train_MAE:': 736.6306754416084,\n",
+       " 'test_RMSE:': 1195.7121863919986,\n",
+       " 'test_RMSE_to_mean_ratio': 0.4195273992729103,\n",
+       " 'test_MAE:': 739.3343840308352}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "applyMethod_make_regression(\n",
+    "pca_regressions = ApplyMethod_autoML(\n",
     "    x_train=xtrain_pca,\n",
     "    x_test=xtest_pca,\n",
     "    y_train=pca_ytrain,\n",
     "    y_test=pca_ytest,\n",
-    "    model=GradientBoostingRegressor(\n",
-    "        n_estimators=600,\n",
-    "        learning_rate=0.1,\n",
-    "        max_features=0.4,\n",
-    "        max_depth=7,\n",
-    "        min_samples_leaf=3,\n",
-    "        loss='huber',\n",
-    "        alpha=0.55\n",
+    "    time_budget=60,\n",
+    "    metric='mse',\n",
+    "    estimator_list=['rf','extra_tree','lgbm','xgboost'],\n",
+    "    task='regression'\n",
     "    )\n",
-    ")[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 797.69305,\n",
-       " 'train_RMSE_to_mean_ratio': 0.27949832143646886,\n",
-       " 'train_MAE:': 576.6144,\n",
-       " 'test_RMSE:': 1037.3265,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3639562343452562,\n",
-       " 'test_MAE:': 646.91187}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## pca xgbregressor\n",
-    "applyMethod_make_regression(\n",
-    "    x_train=xtrain_pca,\n",
-    "    x_test=xtest_pca,\n",
-    "    y_train=pca_ytrain,\n",
-    "    y_test=pca_ytest,\n",
-    "    model=xgboost.XGBRegressor()\n",
-    ")[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 455,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 1235.1517625795238,\n",
-       " 'train_RMSE_to_mean_ratio': 0.43277654549321876,\n",
-       " 'train_MAE:': 547.0091339146375,\n",
-       " 'test_RMSE:': 1031.4889529256247,\n",
-       " 'test_RMSE_to_mean_ratio': 0.361908060087093,\n",
-       " 'test_MAE:': 632.3918978446003}"
-      ]
-     },
-     "execution_count": 455,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gb_regressor = applyMethod_make_regression(\n",
-    "    x_train=vif_x_train,\n",
-    "    x_test=vif_x_test,\n",
-    "    y_test=vif_y_test,\n",
-    "    y_train=vif_y_train,\n",
-    "    model=GradientBoostingRegressor(\n",
-    "        n_estimators=600,\n",
-    "        learning_rate=0.1,\n",
-    "        max_features=0.4,\n",
-    "        max_depth=7,\n",
-    "        min_samples_leaf=3,\n",
-    "        loss='huber',\n",
-    "        alpha=0.55\n",
-    "    )\n",
-    "    )\n",
-    "gb_regressor[2]"
+    "pca_regressions[2]"
    ]
   },
   {
@@ -1352,6 +1276,25 @@
     "    task='regression'\n",
     ")\n",
     "auto_xgb_no_reduction[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto_tree_no_reduction = ApplyMethod_autoML(\n",
+    "    x_train=base_xtrain,\n",
+    "    x_test=base_xtest,\n",
+    "    y_train=base_ytrain,\n",
+    "    y_test=base_ytest,\n",
+    "    time_budget=90,\n",
+    "    metric='mse',\n",
+    "    estimator_list=['rf','extra_tree','lgbm'],\n",
+    "    task='regression'\n",
+    ")\n",
+    "auto_tree_no_reduction[2]"
    ]
   },
   {
