removed confounding outliers

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -237,7 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## remove confounding outliers\n",
+    "def cleanFeatures_remove_outliers(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "    try:\n",
+    "        historical_data = historical_data.loc[historical_data['actual_total_delivery_duration'] > historical_data['est_time_non-prep']]\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return historical_data        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +478,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,6 +518,8 @@
     "    how='inner',\n",
     "    on='clean_store_primary_category'\n",
     ")\n",
+    "## remove confounding outliers\n",
+    "train_df = cleanFeatures_remove_outliers(historical_data=train_df)\n",
     "## add total prep time estimations\n",
     "train_df['store_est_median_total_prep_time'] = train_df['total_items'] * train_df['store_est_time_prep_per_item_median']\n",
     "train_df['store_est_mean_total_prep_time'] = train_df['total_items'] * train_df['store_est_time_prep_per_item_mean']\n",
@@ -1175,21 +1192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1262.8063,\n",
-       " 'train_RMSE_to_mean_ratio': 0.44246622449594974,\n",
-       " 'train_MAE:': 626.7738,\n",
-       " 'test_RMSE:': 1008.511,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3538460141558587,\n",
-       " 'test_MAE:': 626.96643}"
+       "{'train_RMSE:': 1270.1997,\n",
+       " 'train_RMSE_to_mean_ratio': 0.44505675978427817,\n",
+       " 'train_MAE:': 629.5885,\n",
+       " 'test_RMSE:': 1009.2285,\n",
+       " 'test_RMSE_to_mean_ratio': 0.35409776637787826,\n",
+       " 'test_MAE:': 628.75073}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,9 +1227,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 1015.4792574138479,\n",
+       " 'train_RMSE_to_mean_ratio': 0.3558069691175209,\n",
+       " 'train_MAE:': 605.8395026020029,\n",
+       " 'test_RMSE:': 1061.6214083499653,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3724803289003977,\n",
+       " 'test_MAE:': 617.9644167109717}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auto_tree_no_reduction = ApplyMethod_autoML(\n",
     "    x_train=base_xtrain,\n",
@@ -1262,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,12 +1312,37 @@
     "    metric='mse',\n",
     "    estimator_list=['xgboost'],\n",
     "    task='regression'\n",
-    ")[1]"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 895.66437,\n",
+       " 'train_RMSE_to_mean_ratio': 0.31382583315476276,\n",
+       " 'train_MAE:': 40.818295,\n",
+       " 'test_RMSE:': 433.27844,\n",
+       " 'test_RMSE_to_mean_ratio': 0.15202000963322726,\n",
+       " 'test_MAE:': 40.56884}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hypoth_feature_importances[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1316,77 +1374,77 @@
        "    <tr>\n",
        "      <th>136</th>\n",
        "      <td>est_order_total_prep_time</td>\n",
-       "      <td>0.234792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>est_time_non-prep</td>\n",
-       "      <td>0.234606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.201273</td>\n",
+       "      <td>0.337407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>estimated_store_to_consumer_driving_duration</td>\n",
-       "      <td>0.148650</td>\n",
+       "      <td>0.190168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.170191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.147169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.127966</td>\n",
+       "      <td>0.121251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>store_est_time_prep_per_item_std</td>\n",
-       "      <td>0.011723</td>\n",
+       "      <td>0.009386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>clean_store_primary_category__indian</td>\n",
-       "      <td>0.005765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>store_est_time_prep_per_item_median</td>\n",
-       "      <td>0.005157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>store_est_time_prep_per_item_max</td>\n",
-       "      <td>0.004413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>store_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.003571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>max_item_price</td>\n",
-       "      <td>0.003279</td>\n",
+       "      <td>0.005075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>store_est_mean_total_prep_time</td>\n",
-       "      <td>0.002629</td>\n",
+       "      <td>0.004891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>total_busy_dashers</td>\n",
-       "      <td>0.002527</td>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>0.004472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>store_est_time_prep_per_item_min</td>\n",
-       "      <td>0.002461</td>\n",
+       "      <td>0.003477</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>total_onshift_dashers</td>\n",
-       "      <td>0.002355</td>\n",
+       "      <th>18</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.003298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>max_item_price</td>\n",
+       "      <td>0.003215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>clean_store_primary_category__vegan</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>clean_store_primary_category__sushi</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>clean_store_primary_category__tapas</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1394,35 +1452,35 @@
       ],
       "text/plain": [
        "                                         features  importance\n",
-       "136                     est_order_total_prep_time    0.234792\n",
-       "10                              est_time_non-prep    0.234606\n",
-       "13                            busy_to_outstanding    0.201273\n",
-       "9    estimated_store_to_consumer_driving_duration    0.148650\n",
-       "14                         onshift_to_outstanding    0.127966\n",
-       "19               store_est_time_prep_per_item_std    0.011723\n",
-       "61           clean_store_primary_category__indian    0.005765\n",
-       "17            store_est_time_prep_per_item_median    0.005157\n",
-       "16               store_est_time_prep_per_item_max    0.004413\n",
-       "18              store_est_time_prep_per_item_mean    0.003571\n",
-       "4                                  max_item_price    0.003279\n",
-       "26                 store_est_mean_total_prep_time    0.002629\n",
-       "6                              total_busy_dashers    0.002527\n",
-       "15               store_est_time_prep_per_item_min    0.002461\n",
-       "5                           total_onshift_dashers    0.002355"
+       "136                     est_order_total_prep_time    0.337407\n",
+       "9    estimated_store_to_consumer_driving_duration    0.190168\n",
+       "13                            busy_to_outstanding    0.170191\n",
+       "10                              est_time_non-prep    0.147169\n",
+       "14                         onshift_to_outstanding    0.121251\n",
+       "19               store_est_time_prep_per_item_std    0.009386\n",
+       "61           clean_store_primary_category__indian    0.005075\n",
+       "26                 store_est_mean_total_prep_time    0.004891\n",
+       "16               store_est_time_prep_per_item_max    0.004472\n",
+       "15               store_est_time_prep_per_item_min    0.003477\n",
+       "18              store_est_time_prep_per_item_mean    0.003298\n",
+       "4                                  max_item_price    0.003215\n",
+       "95            clean_store_primary_category__vegan    0.000000\n",
+       "91            clean_store_primary_category__sushi    0.000000\n",
+       "92            clean_store_primary_category__tapas    0.000000"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hypoth_feature_importances.sort_values(by='importance',ascending=False).head(15)"
+    "hypoth_feature_importances[1].sort_values(by='importance',ascending=False).head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,21 +1521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1276.2195,\n",
-       " 'train_RMSE_to_mean_ratio': 0.6380965773533236,\n",
-       " 'train_MAE:': 627.37146,\n",
-       " 'test_RMSE:': 972.37317,\n",
-       " 'test_RMSE_to_mean_ratio': 0.48647914300512873,\n",
-       " 'test_MAE:': 628.95416}"
+       "{'train_RMSE:': 1278.835,\n",
+       " 'train_RMSE_to_mean_ratio': 0.6394042896331851,\n",
+       " 'train_MAE:': 629.5205,\n",
+       " 'test_RMSE:': 969.5731,\n",
+       " 'test_RMSE_to_mean_ratio': 0.4850782761385982,\n",
+       " 'test_MAE:': 630.96466}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,15 +1566,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "deliv_prep_model = ApplyMethod_autoML(\n",
-    "    x_train=store_xtrain,\n",
-    "    x_test=store_xtest,\n",
-    "    y_train=store_ytrain,\n",
-    "    y_test=store_ytest,\n",
+    "    x_train=deliv_xtrain,\n",
+    "    x_test=deliv_xtest,\n",
+    "    y_train=deliv_ytrain,\n",
+    "    y_test=deliv_ytest,\n",
     "    time_budget=60,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgboost'],\n",
@@ -1526,27 +1584,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1278.835,\n",
-       " 'train_RMSE_to_mean_ratio': 0.6394042896331851,\n",
-       " 'train_MAE:': 629.5205,\n",
-       " 'test_RMSE:': 969.5731,\n",
-       " 'test_RMSE_to_mean_ratio': 0.4850782761385982,\n",
-       " 'test_MAE:': 630.96466}"
+       "966.95306"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = auto_xgb_no_reduction[0].predict(deliv_xtest)\n",
+    "mean_squared_error(deliv_ytest,pred,squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1009.2285"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(base_ytest,auto_xgb_no_reduction[0].predict(base_xtest),squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 1277.0405,\n",
+       " 'train_RMSE_to_mean_ratio': 0.44739147838462906,\n",
+       " 'train_MAE:': 627.72217,\n",
+       " 'test_RMSE:': 973.2295,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3412162587251421,\n",
+       " 'test_MAE:': 630.2245}"
+      ]
+     },
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "deliv_prep_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.223089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.140959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
+       "      <td>0.117252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.112905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.082427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>pred_order_prep_time</td>\n",
+       "      <td>0.072002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>store_est_time_prep_per_item_median</td>\n",
+       "      <td>0.018401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.011803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>0.011520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>store_est_time_prep_per_item_std</td>\n",
+       "      <td>0.011020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>market_id__1.0</td>\n",
+       "      <td>0.010570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>estimated_order_place_duration</td>\n",
+       "      <td>0.009278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>available_dashers</td>\n",
+       "      <td>0.007909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>created_hour_of_day__2</td>\n",
+       "      <td>0.006794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>store_est_mean_total_prep_time</td>\n",
+       "      <td>0.006267</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         features  importance\n",
+       "25               store_est_median_total_prep_time    0.223089\n",
+       "10                              est_time_non-prep    0.140959\n",
+       "9    estimated_store_to_consumer_driving_duration    0.117252\n",
+       "13                            busy_to_outstanding    0.112905\n",
+       "14                         onshift_to_outstanding    0.082427\n",
+       "136                          pred_order_prep_time    0.072002\n",
+       "17            store_est_time_prep_per_item_median    0.018401\n",
+       "18              store_est_time_prep_per_item_mean    0.011803\n",
+       "16               store_est_time_prep_per_item_max    0.011520\n",
+       "19               store_est_time_prep_per_item_std    0.011020\n",
+       "98                                 market_id__1.0    0.010570\n",
+       "8                  estimated_order_place_duration    0.009278\n",
+       "11                              available_dashers    0.007909\n",
+       "113                        created_hour_of_day__2    0.006794\n",
+       "26                 store_est_mean_total_prep_time    0.006267"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deliv_prep_model[1].sort_values(by='importance',ascending=False).head(15)"
    ]
   },
   {
